--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "aos": "^2.3.4",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.10.5",
+    "ng-multiselect-dropdown": "^1.0.0",
     "ngx-bootstrap": "^9.0.0",
     "ngx-slick-carousel": "^15.0.0",
     "rxjs": "~7.5.0",
