--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
     "module": "es2020",
     "strictPropertyInitialization": false,
     "allowSyntheticDefaultImports": true,
+    "skipLibCheck": true,
     "lib": [
       "es2020",
       "dom"
@@ -29,6 +30,6 @@
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
-    "strictTemplates": true
+    "strictTemplates": false
   }
 }
